# avbd-demo2d-python

./: CMakeLists.txt  pyproject.toml  test.py  test_visualization.py
bindings/: api_shim.cpp  api_shim.hpp  avbd_py.cpp
