[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "avbd2d"
version = "0.0.1"
requires-python = ">=3.9"
description = "Python bindings for avbd-demo2d (2D AVBD rigid bodies)"
authors = [{name="You"}]
license = {text="MIT"}

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
